@@ -21,6 +21,7 @@ t/01load.t
 t/20attributes.t
 t/21help_methods.t
 t/22run_methods.t
+t/24config.t
 t/30plugin-test.t
 t/31plugin-twitter.t
 t/32plugin-identica.t
@@ -30,4 +31,9 @@ t/93disttest.t
 t/94metatest.t
 t/95changedate.t
 t/96metatest.t
+t/data/config.ini
+t/data/config.json
+t/data/config.pl
+t/data/config.xml
+t/data/config.yml
 xt/23run_methods.t
