@@ -1,0 +1,4 @@
+[CONFIG]
+order=asc
+tag=tag:
+prompt=prompt:
