@@ -1,0 +1,7 @@
+<xml>
+  <CONFIG>
+    <tag>.</tag>
+    <debug>1</debug>
+    <history>history.log</history>
+  </CONFIG>
+</xml>
